FMADD: CF bugfix, test updates to induce fmadd, new fmadd test bugfix to CoreFunctional (DREG is src for non-accumulator-based FMADD) test updates: sva rtm generates fmadd new non_rtm fmadd test (though, the compiler could get smart and potentially not generate an fmadd...)

--- a/rigel-sim/test/non_rtm/Makefile
+++ b/rigel-sim/test/non_rtm/Makefile
@@ -1,5 +1,5 @@
-SUBDIRS=trivial nosynch float malloc barrier simple_test coherence_test sva mvm syscalls
-DSUBDIRS=trivial nosynch float malloc barrier simple_test sva mvm syscalls
+SUBDIRS=trivial nosynch float fmadd malloc barrier simple_test coherence_test sva mvm syscalls
+DSUBDIRS=trivial nosynch float fmadd malloc barrier simple_test sva mvm syscalls
 MAKE=make
 
 test:
