sim installs release,debug on 'make install'

--- a/rigel-sim/Makefile
+++ b/rigel-sim/Makefile
@@ -14,7 +14,7 @@ clean_debug:
 	$(MAKE) -C ${DEBUGDIR} clean
 clean_release:
 	$(MAKE) -C ${RELEASEDIR} clean
-install: install_release
+install: install_release install_debug
 install_debug:
 	$(MAKE) -C ${DEBUGDIR} install
 install_release:
