pretty colorize test folder pass/fail messages

--- a/rigel-sim/test/Makefile
+++ b/rigel-sim/test/Makefile
@@ -6,17 +6,17 @@ SHELL=bash
 test:
 	pushd ../ && $(MAKE) -j 4 -s && popd
 	@for i in $(SUBDIRS); do \
-	echo "[[ CWD test: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s test); done
 
 dtest:
 	pushd ../ && $(MAKE) -j 4 -s && popd
 	@for i in $(SUBDIRS); do \
-	echo "[[ CWD test: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s dtest); done
 
 clean:
 	@for i in $(SUBDIRS); do \
-	echo "[[ CWD clean: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s clean); done
 
