--- a/rigel-sim/test/non_rtm/Makefile
+++ b/rigel-sim/test/non_rtm/Makefile
@@ -4,16 +4,16 @@ MAKE=make
 
 test:
 	@for i in $(SUBDIRS); do \
-	echo "[[ -> CWD test: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s test); done
 
 dtest:
 	@for i in $(DSUBDIRS); do \
-	echo "[[ -> CWD test: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s dtest); done
 
 clean:
 	@for i in $(SUBDIRS); do \
-	echo "[[ -> CWD clean: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s clean); done
 
