--- a/rigel-sim/test/threads/Makefile
+++ b/rigel-sim/test/threads/Makefile
@@ -3,10 +3,10 @@ MAKE=make
 
 test:
 	@for i in $(SUBDIRS); do \
-	echo "[[ -> CWD test: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s test); done
 
 clean:
 	@for i in $(SUBDIRS); do \
-	echo "[[ -> CWD clean: $$i ]]"; \
+	echo "[$$i]"; \
 	(cd $$i; $(MAKE) -s clean); done
