checkpoint commit: add tree network segfaults

--- a/rigel-sim/Makefile.am
+++ b/rigel-sim/Makefile.am
@@ -34,6 +34,7 @@ common_SOURCES = \
  src/interconnect/tile_interconnect_ideal.cpp \
  src/interconnect/tile_interconnect_new.cpp \
  src/interconnect/tile_interconnect_bcast.cpp \
+ src/interconnect/tree_network.cpp \
  src/memory/memory_model_ideal.cpp \
  src/memory/memory_model_gddr4.cpp \
  src/memory/dram_controller.cpp \
