fork chip: ChipLegacy for old stuff, ChipTiled for new stuff (user.config updates for this)

--- a/rigel-sim/Makefile.am
+++ b/rigel-sim/Makefile.am
@@ -70,6 +70,7 @@ common_SOURCES = \
  src/stages/bpredict.cpp \
  src/stages/stage_base.cpp \
  src/chip/chip.cpp \
+ src/chip/chip_legacy.cpp \
  src/cluster/cluster_legacy.cpp \
  src/cluster/clusterbase.cpp \
  src/cluster/cluster_functional.cpp \
