Large commit: forked cluster, cluster cache for non-functional modes ClusterCacheBase has common functionality of CCacheFunctional,Structural various small updates and fixes Callback wrappers can specify a (templated) return type InPortCallback returns result of the callback, not always Ack

--- a/rigel-sim/Makefile.am
+++ b/rigel-sim/Makefile.am
@@ -74,8 +74,10 @@ common_SOURCES = \
  src/cluster/cluster_legacy.cpp \
  src/cluster/clusterbase.cpp \
  src/cluster/cluster_functional.cpp \
+ src/cluster/cluster_structural.cpp \
  src/cluster/cluster_cache_base.cpp \
  src/cluster/cluster_cache_functional.cpp \
+ src/cluster/cluster_cache_structural.cpp \
  src/core/corebase.cpp \
  src/core/core_functional.cpp \
  src/core/core_inorder_legacy.cpp \
