Rename corebase files to core_base

--- a/rigel-sim/Makefile.am
+++ b/rigel-sim/Makefile.am
@@ -78,7 +78,7 @@ common_SOURCES = \
  src/cluster/cluster_cache_base.cpp \
  src/cluster/cluster_cache_functional.cpp \
  src/cluster/cluster_cache_structural.cpp \
- src/core/corebase.cpp \
+ src/core/core_base.cpp \
  src/core/core_functional.cpp \
  src/core/core_inorder_legacy.cpp \
  src/core/regfile.cpp \
